--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "dayjs": "^1.11.9",
         "react-icons": "^4.10.1",
         "react-lazy-load-image-component": "^1.6.0",
         "react-select": "^5.7.3",
