--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.0.2",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -20,7 +21,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "chart.js": "^4.3.0",
         "dayjs": "^1.11.9",
+        "react-chartjs-2": "^5.2.0",
         "react-icons": "^4.10.1",
         "react-lazy-load-image-component": "^1.6.0",
         "react-select": "^5.7.3",
