--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "dependencies": {
         "chart.js": "^4.3.0",
         "dayjs": "^1.11.9",
+        "draft-js": "^0.11.7",
+        "draftjs-to-html": "^0.9.1",
         "react-chartjs-2": "^5.2.0",
+        "react-draft-wysiwyg": "^1.15.0",
         "react-icons": "^4.10.1",
         "react-lazy-load-image-component": "^1.6.0",
         "react-select": "^5.7.3",
